--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.12",
     "mongoose-delete": "^0.5.3",
