--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     }
   },
   "dependencies": {
+    "argon2": "^0.28.2",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "jsonwebtoken": "^8.5.1",
