--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     }
   },
   "dependencies": {
-    "argon2": "^0.28.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
